--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,8 +21,17 @@ requirements:
     - pip
     - python >=3.6
   run:
+    # Same as pyribs-base https://github.com/conda-forge/pyribs-base-feedstock/blob/master/recipe/meta.yaml
+    - decorator >=4.0.0
+    - numba >=0.45.1
+    - numpy >=1.17.0
+    - pandas >=1.0.0
     - python >=3.6
-    - pyribs-base =={{ version }}
+    - scikit-learn >=0.20
+    - scipy >=1.0.0
+    - sortedcontainers >=2.0.0
+    - threadpoolctl >=2.0.0
+    - toml >=0.10.0
     # Remaining deps come from the ribs[all] extra.
     - matplotlib-base >=3.0.0
 
