--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 # Adapted from Gymnasium:
 # https://github.com/conda-forge/gymnasium-feedstock/blob/main/recipe/meta.yaml
-{% set name = "pyribs" %}
 {% set pypi_name = "ribs" %}
 {% set version = "0.5.0" %}
 
@@ -19,9 +18,9 @@ build:
 
 requirements:
   build:
-    - python >=3.7
+    - python
   host:
-    - python >=3.7
+    - python
     - pip
   run:
     - python >=3.7
@@ -32,9 +31,9 @@ outputs:
       script: {{ PYTHON }} -m pip install . -vv --no-deps
     requirements:
       build:
-        - python >=3.7
+        - python
       host:
-        - python >=3.7
+        - python
         - pip
       run:
         - numba >=0.51.0
@@ -58,7 +57,7 @@ outputs:
   - name: pyribs-visualize
     requirements:
       host:
-        - python >=3.7
+        - python
         - pip
       run:
         - python
@@ -75,7 +74,7 @@ outputs:
   - name: pyribs-all
     requirements:
       host:
-        - python >=3.7
+        - python
       run:
         - python >=3.7
         # Add future extras down here.
