--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,9 +18,9 @@ build:
 
 requirements:
   build:
-    - python >=3.7
+    - python
   host:
-    - python >=3.7
+    - python
     - pip
   run:
     - python >=3.7
@@ -31,9 +31,9 @@ outputs:
       script: {{ PYTHON }} -m pip install . -vv --no-deps
     requirements:
       build:
-        - python >=3.7
+        - python
       host:
-        - python >=3.7
+        - python
         - pip
       run:
         - numba >=0.51.0
@@ -57,7 +57,7 @@ outputs:
   - name: pyribs-visualize
     requirements:
       host:
-        - python >=3.7
+        - python
         - pip
       run:
         - python >=3.7
@@ -74,7 +74,7 @@ outputs:
   - name: pyribs-all
     requirements:
       host:
-        - python >=3.7
+        - python
         - pip
       run:
         - python >=3.7
