--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,15 +6,15 @@
 
 package:
   name: pyribs-split
-  version: {{ version }}
+  version: "{{ version }}"
 
 source:
   url: https://pypi.io/packages/source/{{ pypi_name[0] }}/{{ pypi_name }}/ribs-{{ version }}.tar.gz
   sha256: bdb8e7ccc4620f448b72a16fafff96fb0961a41405ec7b2f3ecb83dd291fa156
 
 build:
-  number: 1
-  # noarch: python
+  number: 2
+  noarch: python
 
 requirements:
   build:
@@ -60,7 +60,7 @@ outputs:
         - python
         - pip
       run:
-        - python
+        - python >=3.7
         - {{ pin_subpackage("pyribs", exact=True) }}
         - matplotlib-base >=3.0.0
     test:
@@ -75,6 +75,7 @@ outputs:
     requirements:
       host:
         - python
+        - pip
       run:
         - python >=3.7
         # Add future extras down here.
