--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,7 +5,7 @@
 
 
 package:
-  name: pyribs-split
+  name: pyribs-suite
   version: "{{ version }}"
 
 source:
@@ -13,17 +13,8 @@ source:
   sha256: bdb8e7ccc4620f448b72a16fafff96fb0961a41405ec7b2f3ecb83dd291fa156
 
 build:
-  number: 2
+  number: 3
   noarch: python
-
-requirements:
-  build:
-    - python
-  host:
-    - python
-    - pip
-  run:
-    - python >=3.7
 
 outputs:
   - name: pyribs
@@ -31,9 +22,9 @@ outputs:
       script: {{ PYTHON }} -m pip install . -vv --no-deps
     requirements:
       build:
-        - python
+        - python >=3.7
       host:
-        - python
+        - python >=3.7
         - pip
       run:
         - numba >=0.51.0
@@ -57,7 +48,7 @@ outputs:
   - name: pyribs-visualize
     requirements:
       host:
-        - python
+        - python >=3.7
         - pip
       run:
         - python >=3.7
@@ -74,7 +65,7 @@ outputs:
   - name: pyribs-all
     requirements:
       host:
-        - python
+        - python >=3.7
         - pip
       run:
         - python >=3.7
