--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,13 +14,15 @@ source:
 
 build:
   number: 3
-  noarch: python
 
 outputs:
   - name: pyribs
     build:
       script: {{ PYTHON }} -m pip install . -vv --no-deps
+      noarch: python
     requirements:
+      build:
+        - python
       host:
         - python >=3.7
         - pip
