--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,6 +48,7 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: pyribs-visualize
@@ -69,6 +70,7 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: pyribs-pycma
@@ -89,6 +91,7 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: pyribs-pymoo
@@ -109,6 +112,7 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: pyribs-all
@@ -133,8 +137,8 @@ outputs:
       commands:
         - pip check
       requires:
-        - pip
         - python {{ python_min }}
+        - pip
 
 about:
   home: https://github.com/icaros-usc/pyribs
