--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ requirements:
   build:
     - python
   run:
-    - python >=3.9
+    - python >=3.10
 
 outputs:
   - name: pyribs
@@ -33,8 +33,9 @@ outputs:
         - pip
         - setuptools
       run:
+        - array-api-compat
         - numba >=0.51.0
-        - numpy >=1.17.3
+        - numpy >=2.0.0
         - numpy_groupies >=0.9.16
         - pandas >=1.0.0
         - python >={{ python_min }}
@@ -42,6 +43,7 @@ outputs:
         - scipy >=1.7.0
         - sortedcontainers >=2.0.0
         - threadpoolctl >=3.0.0
+        - typing_extensions >=4.12.0
     test:
       imports:
         - ribs
